Combined to style attributes into one, and properly closed the language attribute in the  HTML tag

--- a/Table.html
+++ b/Table.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="'en">
+<html lang="en">
   <head>
     <title>TOP 5 HIGHEST MOUNTAINS IN THE WORLD</title>
     
@@ -43,7 +43,7 @@
 
   <div id="Table">
 
-    <table style="width:70%;" style="height: 70%;" >
+    <table style="width:70%; height: 70%;" >
     <caption>
       <b>Data source:Wikipedia</b>
     </caption>
